<resources>
    <string name="app_name">Weight</string>
    <string name="action_settings">Settings</string>
    <string name="genderTitle">Sexe</string>
    <string name="enteryourname">Entrez votre nom :</string>
    <string name="selectyourgender">Selectionnez votre sexe</string>
    <string name="nameKey">nameKey</string>
    <string name="genderKey">genderKey</string>
    <string name="preferences">preferences</string>
    <string name="enterweight">Poids:</string>
    <string name="difference">Δsemaine</string>
    <string name="difference2">Δdebut</string>
    <string name="poids">Poids</string>
    <string name="date">Date</string>
    <string name="validate">valider</string>
    <string name="calculatePoint">points</string>
    <string name="kCal">kCal</string>
    <string name="pour">Pour</string>
    <string name="part">Part</string>
    <string name="addToJournal">ajouter au journal</string>
    <string name="addToDB">ajouter a la liste</string>
    <string name="name">Nom</string>
    <string name="recherche">chercher</string>
    <string name="findFood">chercher</string>
    <string name="go">GO</string>
    <string name="pp">PPs</string>
    <string name="unit">Unité</string>
    <string name="toastConsumedAdded">Aliment ajouté au journal</string>
    <string name="toastSportAdded">Sport ajouté au journal</string>
    <string name="toastConsumedNotAdded">Aliment non ajouté au journal</string>
    <string name="toastFoodAdded">Aliment ajouté à la liste</string>
    <string name="toastFoodNotAdded">Aliment deja existant</string>
    <string name="leftPoints">points\n</string>
    <string name="hebdoPoints">hebdo\n</string>
    <string name="sportPoints">sport\n</string>
    <string name="delete">supprimer</string>
    <string name="modify">Modifier</string>
    <string name="plus">+</string>
    <string name="fastAdd">Ajout Rapide</string>
    <string name="sportAdd">Ajouter Sport</string>
    <string name="points">PPs\n</string>
    <string name="add">Ajouter</string>
    <string name="addFood">Ajouter un aliment</string>
    <string name="toastRemoved">Aliment supprimé</string>
    <string name="sportRemoved">Sport supprimé</string>
    <string name="time">temps</string>
    <string name="addSport">Ajouter Sport</string>


</resources>
