<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2"
        android:rowCount="7"
        android:columnOrderPreserved="false">

        <EditText
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kCalText"
            android:layout_row="0"
            android:layout_column="0"
            android:hint="@string/kCal"
            android:layout_columnSpan="2" />


        <EditText
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pourText"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/pour"
            android:layout_columnSpan="2" />

        <EditText
            android:inputType="numberDecimal"
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/partText"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/part"
            android:layout_columnSpan="2" />


        <Button
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculatePoint"
            android:id="@+id/calculatePointButton"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/pointResultText"
            android:layout_row="3"
            android:layout_column="1" />

        <EditText
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/nameText"
            android:layout_row="4"
            android:layout_column="0"
            android:hint="@string/name"
            android:layout_columnSpan="2"/>

        <EditText
            android:gravity="center"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/unitText"
            android:layout_row="5"
            android:layout_column="0"
            android:hint="@string/unit"
            android:layout_columnSpan="2" />

        <Button
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addToJournal"
            android:id="@+id/addButtonJournal"
            android:layout_row="6"
            android:layout_column="0"/>

        <Button
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addToDB"
            android:id="@+id/addButtonList"
            android:layout_row="6"
            android:layout_column="1"/>

    </GridLayout>

</RelativeLayout>