<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.75"
        android:weightSum="1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sportName"
            android:layout_weight="0.33"
            android:hint = "@string/name"
            android:gravity="center"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sportCalories"
            android:layout_weight="0.33"
            android:hint = "@string/kCal"
            android:gravity="center"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sportTime"
            android:layout_weight="0.33"
            android:hint = "@string/time"
            android:gravity="center"
            android:inputType="text"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:weightSum="1">
        <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/addSport"
        android:id="@+id/sportAdd" /></LinearLayout>
</LinearLayout>