<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.70"
                android:weightSum="1">

                <EditText
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:layout_gravity="fill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/kCalText"
                    android:hint="@string/kCal"
                    android:layout_weight="0.33" />

                <EditText
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:layout_gravity="fill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pourText"
                    android:hint="@string/pour"
                    android:layout_weight="0.33" />

                <EditText
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:layout_gravity="fill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/partText"
                    android:hint="@string/part"
                    android:layout_weight="0.33" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/points"
                android:id="@+id/pointTextView"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.30"
                android:gravity="center"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/addButton"
            android:layout_weight="0.2"/>

    </LinearLayout>

</LinearLayout>