<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/weightContainer">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:text="@string/enterweight"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="left"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/weightText"
                android:layout_weight=".33" />

            <Button
                android:id="@+id/commitWeight"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/validate"
                android:gravity="left"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />
        </LinearLayout>
        <ImageView
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingBottom="10dip" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date"
                android:layout_weight="0.25"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/poids"
                android:layout_weight="0.25"
                android:id="@+id/textView7" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/difference"
                android:layout_weight="0.25"
                android:id="@+id/textView8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/difference2"
                android:layout_weight="0.25"
                android:id="@+id/textView9" />
        </LinearLayout>

        <ImageView
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingBottom="10dip" />
        <!--LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15/12/2015"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/textColor"
                android:gravity="left"
                android:layout_weight="0.33"/>

            <TextView
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="155kg"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:layout_weight="0.33" />

            <TextView
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="-79kg"
                android:gravity="right"
                android:textColor="@color/textColor"
                android:layout_weight="0.33" />
        </LinearLayout-->
    </LinearLayout>
</ScrollView>